--- a/style.css
+++ b/style.css
@@ -6,22 +6,23 @@
 }
 
 body {
-    /*height: 100%;*/
-    /*width: calc(100vw + var(--tg-content-safe-area-inset-left) + var(--tg-content-safe-area-inset-right));*/
-    /*height: calc(100vh + var(--tg-content-safe-area-inset-top) + var(--tg-content-safe-area-inset-bottom));*/
-    /*position: fixed;*/
+    width: calc(100vw - var(--tg-content-safe-area-inset-left) - var(--tg-content-safe-area-inset-right));
+    height: calc(100vh - var(--tg-content-safe-area-inset-top) - var(--tg-content-safe-area-inset-bottom));
+    position: fixed;
     top: var(--tg-content-safe-area-inset-top);
     bottom: var(--tg-content-safe-area-inset-bottom);
     left: var(--tg-content-safe-area-inset-left);
     right: var(--tg-content-safe-area-inset-right);
+    overflow: hidden;
 }
 
 .crm-system {
     max-width: 1200px;
     margin: 0 auto;
-    /*overflow: auto;*/
-    /*height: 100%;*/
-    /*width: 100%;*/
+    overflow: auto;
+    height: 100%;
+    width: 100%;
+    margin-top: 0 !important;
 }
 
 .crm-system__title {
